- various small changes & fixes.
** 4.4.0 - March 8, 2020 **
- Cross ban! Add servers to the list first, but you'll be able to ban accounts across multiple servers with this ability.
!addcsv - Add your server to the cross ban list
!remcsv - Remove your server to the cross ban list
!cban - Cross ban a user.
!cunban - Unban a user across the servers.
!addcadmin - BOT OWNER - add an admin that can use cban/unban commands
!remcadmin - REMOVE, BOT OWNER ONLY
!listcadmins - list cross-ban admins, BOT OWNER ONLY
4.4.1 - Update JDA to 4.1.1_133, use gateway intents for future compatibility.
4.4.2 - JDA: 4.1.1_137, make autoban toggleable in any server and time-configurable.
4.4.4 - JDA: 4.1.1_145, cpastban for storing banned IDs for future bans (Arr)
4.4.5 - JDA: 4.1.1_165, !enlarge - Enlarge your emotes!
4.5.0 - Update dependencies to newer versions, JDA to 4.2.0_172, more coming
4.5.1 - Typing statuses are cool, JDA to 4.2.0_183
4.5.2 - Update dependencies, Update JDA to 4.2.0_198, upcoming (4.6): purge/clear
** 4.6.0 - January 11, 2021**
-Value Guides command, thanks to CSV parsing, 
JDA 4.2.0_227
clear commands [WIP]
updated all dependencies.
4.6.1 - fix !randmeme command array out of bounds error
4.6.2 - !d20 - self explanatory
4.6.3 - Huge dependency update, remove bintray repo as it's shutting down. JDA updated to 4.2.1, possible work on slash commands once 4.3 comes out.
4.6.4 - Updated to JDA 4.3, added a button on the command list for the website, changed some code around due to deprecated stuff.
5.0.0 ---- in development -----
1. update JDA to v5, currently alpha
2. update dependencies, such as log4j again
3. item limit on value guides search command
4. GIVEAWAYS - Code adapted from https://github.com/jagrosh/GiveawayBot, modified for use. Note: it doesn't save anything so if the bot is
restarted, you will have to manually keep track and then do a reroll.
5. - Greek translation for petstats.