@@ -92,6 +92,11 @@ public class UserJoinHandler extends ListenerAdapter {
 						embed.setFooter("CharizardBot Team", "https://cdn.discordapp.com/attachments/382377954908569600/463038441547104256/angery_cherizord.png");
 						event.getGuild().getTextChannelById(logChan).sendMessageEmbeds(embed.build()).queue();
 					}
+					String gtpModlogChan = "468502270171021312";
+					if (event.getGuild().getId().equals("468440854886088714") && event.getJDA().getTextChannelById(gtpModlogChan).canTalk()) { //GTP Moderation Log for AutoBan
+						event.getGuild().getTextChannelById(gtpModlogChan).sendMessage("User: <@" + event.getMember().getId() + "> / " + event.getMember().getId() +
+						"\nAction Taken: Auto-banned by CharizardBot for being too new.. \nPlease note that his moderation log is automatic.").queue();
+					}
 				} catch (Exception e) {e.printStackTrace();}
 			}
     	}
